# stosys-project-master

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake
scripts/: genworkload.py
src/: assignment2_test_without_gc.cpp  assignment3_test_with_gc.cpp  cftl.c  cftl.h  cppwrapper.h  ftl.cpp  ftl.cpp.orig  ftl.h  kv.c  kv.h  sample.cpp
src/test/: ftl.cpp  ftl.h  ocss-main.c
